bindings/c/whiteout_m2.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_M2CompatQuaternion whiteout_M2CompatQuaternion;
typedef struct whiteout_M2ColorBGRA whiteout_M2ColorBGRA;
typedef struct whiteout_M2Extent whiteout_M2Extent;
typedef struct whiteout_M2KeySpanRef whiteout_M2KeySpanRef;
typedef struct whiteout_M2AnimationTrackBase whiteout_M2AnimationTrackBase;
typedef struct whiteout_M2ParticleEmitterExtension whiteout_M2ParticleEmitterExtension;
typedef struct whiteout_M2LodProfile whiteout_M2LodProfile;
typedef struct whiteout_M2WaterfallData whiteout_M2WaterfallData;
/* ── M2CompatQuaternion ─────────────────────────────────────────────── */

whiteout_M2CompatQuaternion* whiteout_m2_M2CompatQuaternion_new(void);
void whiteout_m2_M2CompatQuaternion_delete(whiteout_M2CompatQuaternion* self);
/* ── M2ColorBGRA ─────────────────────────────────────────────── */

whiteout_M2ColorBGRA* whiteout_m2_M2ColorBGRA_new(void);
void whiteout_m2_M2ColorBGRA_delete(whiteout_M2ColorBGRA* self);
/* ── M2Extent ─────────────────────────────────────────────── */

whiteout_M2Extent* whiteout_m2_M2Extent_new(void);
void whiteout_m2_M2Extent_delete(whiteout_M2Extent* self);
whiteout_Vector3f* whiteout_m2_M2Extent_get_minimum(whiteout_M2Extent* self);
void whiteout_m2_M2Extent_set_minimum(whiteout_M2Extent* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2Extent_get_maximum(whiteout_M2Extent* self);
void whiteout_m2_M2Extent_set_maximum(whiteout_M2Extent* self, const whiteout_Vector3f* value);
float whiteout_m2_M2Extent_get_sphereRadius(const whiteout_M2Extent* self);
void whiteout_m2_M2Extent_set_sphereRadius(whiteout_M2Extent* self, float value);
/* ── M2KeySpanRef ─────────────────────────────────────────────── */

/* One sequence's slice of a key array, as the file writes it: a count and an offset into whichever file holds that sequence's keys. */
/*  */
/* Kept only by a lazily parsed model (Parser::setLazyAnimations), which leaves the sub-arrays of externally-stored sequences empty until loadSequence() reads their `.anim` sibling. Nothing else needs it: an eager parse consumes the reference on the spot. */
whiteout_M2KeySpanRef* whiteout_m2_M2KeySpanRef_new(void);
void whiteout_m2_M2KeySpanRef_delete(whiteout_M2KeySpanRef* self);
uint32_t whiteout_m2_M2KeySpanRef_get_count(const whiteout_M2KeySpanRef* self);
void whiteout_m2_M2KeySpanRef_set_count(whiteout_M2KeySpanRef* self, uint32_t value);
uint32_t whiteout_m2_M2KeySpanRef_get_offset(const whiteout_M2KeySpanRef* self);
void whiteout_m2_M2KeySpanRef_set_offset(whiteout_M2KeySpanRef* self, uint32_t value);
/* ── M2AnimationTrackBase ─────────────────────────────────────────────── */

whiteout_M2AnimationTrackBase* whiteout_m2_M2AnimationTrackBase_new(void);
void whiteout_m2_M2AnimationTrackBase_delete(whiteout_M2AnimationTrackBase* self);
int32_t whiteout_m2_M2AnimationTrackBase_get_interpolationType(const whiteout_M2AnimationTrackBase* self);
void whiteout_m2_M2AnimationTrackBase_set_interpolationType(whiteout_M2AnimationTrackBase* self, int32_t value);
uint16_t whiteout_m2_M2AnimationTrackBase_get_globalSequenceId(const whiteout_M2AnimationTrackBase* self);
void whiteout_m2_M2AnimationTrackBase_set_globalSequenceId(whiteout_M2AnimationTrackBase* self, uint16_t value);
/* ── M2ParticleEmitterExtension ─────────────────────────────────────────────── */

whiteout_M2ParticleEmitterExtension* whiteout_m2_M2ParticleEmitterExtension_new(void);
void whiteout_m2_M2ParticleEmitterExtension_delete(whiteout_M2ParticleEmitterExtension* self);
float whiteout_m2_M2ParticleEmitterExtension_get_zSource(const whiteout_M2ParticleEmitterExtension* self);
void whiteout_m2_M2ParticleEmitterExtension_set_zSource(whiteout_M2ParticleEmitterExtension* self, float value);
float whiteout_m2_M2ParticleEmitterExtension_get_colorMult(const whiteout_M2ParticleEmitterExtension* self);
void whiteout_m2_M2ParticleEmitterExtension_set_colorMult(whiteout_M2ParticleEmitterExtension* self, float value);
float whiteout_m2_M2ParticleEmitterExtension_get_alphaMult(const whiteout_M2ParticleEmitterExtension* self);
void whiteout_m2_M2ParticleEmitterExtension_set_alphaMult(whiteout_M2ParticleEmitterExtension* self, float value);
/* ── M2LodProfile ─────────────────────────────────────────────── */

whiteout_M2LodProfile* whiteout_m2_M2LodProfile_new(void);
void whiteout_m2_M2LodProfile_delete(whiteout_M2LodProfile* self);
uint16_t whiteout_m2_M2LodProfile_get_flags(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_flags(whiteout_M2LodProfile* self, uint16_t value);
uint16_t whiteout_m2_M2LodProfile_get_numLodLevels(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_numLodLevels(whiteout_M2LodProfile* self, uint16_t value);
float whiteout_m2_M2LodProfile_get_lodDistance(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_lodDistance(whiteout_M2LodProfile* self, float value);
/* Fixed-point LOD scale, applied as `lodScaleRaw / 2048.0` and only when `flags & 0x08` is set (otherwise the client uses 1.0). This is the pair of bytes previously read as `reserved0` + `lodFlags`; reading it as a u16 explains why the high byte looked like a mirror of flags bit 3, since 0x0800 / 2048 == 1.0. */
uint16_t whiteout_m2_M2LodProfile_get_lodScaleRaw(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_lodScaleRaw(whiteout_M2LodProfile* self, uint16_t value);
uint8_t whiteout_m2_M2LodProfile_get_lodBatchCount(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_lodBatchCount(whiteout_M2LodProfile* self, uint8_t value);
uint8_t whiteout_m2_M2LodProfile_get_reserved1(const whiteout_M2LodProfile* self);
void whiteout_m2_M2LodProfile_set_reserved1(whiteout_M2LodProfile* self, uint8_t value);
/* ── M2WaterfallData ─────────────────────────────────────────────── */

whiteout_M2WaterfallData* whiteout_m2_M2WaterfallData_new(void);
void whiteout_m2_M2WaterfallData_delete(whiteout_M2WaterfallData* self);
float whiteout_m2_M2WaterfallData_get_bumpScale(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_bumpScale(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value0_x(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value0_x(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value0_y(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value0_y(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value0_z(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value0_z(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value1_w(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value1_w(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value0_w(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value0_w(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value1_x(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value1_x(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value1_y(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value1_y(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value2_w(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value2_w(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value3_y(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value3_y(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value3_x(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value3_x(whiteout_M2WaterfallData* self, float value);
whiteout_Vector4f* whiteout_m2_M2WaterfallData_get_baseColor(whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_baseColor(whiteout_M2WaterfallData* self, const whiteout_Vector4f* value);
uint16_t whiteout_m2_M2WaterfallData_get_flags(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_flags(whiteout_M2WaterfallData* self, uint16_t value);
uint16_t whiteout_m2_M2WaterfallData_get_unknown0(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_unknown0(whiteout_M2WaterfallData* self, uint16_t value);
float whiteout_m2_M2WaterfallData_get_value3_w(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value3_w(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value3_z(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value3_z(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_value4_y(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_value4_y(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_unknown1(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_unknown1(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_unknown2(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_unknown2(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_unknown3(const whiteout_M2WaterfallData* self);