bindings/csharp/Whiteout/M2/NativeMethods.M2.cs

// SPDX-License-Identifier: BSD-3-Clause
// Copyright (c) 2026 Fernando Sahmkow
// AUTOGENERATED by tools/codegen/emit_csharp.py — DO NOT EDIT.

using System.Runtime.InteropServices;

namespace Whiteout.M2.Internal;

internal static partial class NativeMethods
{
    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2CompatQuaternion_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2CompatQuaternion_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ColorBGRA_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ColorBGRA_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Extent_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Extent_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Extent_get_minimum(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Extent_set_minimum(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Extent_get_maximum(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Extent_set_maximum(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2Extent_get_sphereRadius(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Extent_set_sphereRadius(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2KeySpanRef_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2KeySpanRef_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2KeySpanRef_get_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2KeySpanRef_set_count(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2KeySpanRef_get_offset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2KeySpanRef_set_offset(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2AnimationTrackBase_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2AnimationTrackBase_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2AnimationTrackBase_get_interpolationType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2AnimationTrackBase_set_interpolationType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2AnimationTrackBase_get_globalSequenceId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2AnimationTrackBase_set_globalSequenceId(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ParticleEmitterExtension_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitterExtension_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitterExtension_get_zSource(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitterExtension_set_zSource(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitterExtension_get_colorMult(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitterExtension_set_colorMult(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitterExtension_get_alphaMult(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitterExtension_set_alphaMult(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2LodProfile_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2LodProfile_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2LodProfile_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2LodProfile_set_flags(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2LodProfile_get_numLodLevels(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2LodProfile_set_numLodLevels(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2LodProfile_get_lodDistance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2LodProfile_set_lodDistance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2LodProfile_get_lodScaleRaw(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2LodProfile_set_lodScaleRaw(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2LodProfile_get_lodBatchCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2LodProfile_set_lodBatchCount(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2LodProfile_get_reserved1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2LodProfile_set_reserved1(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2WaterfallData_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_bumpScale(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_bumpScale(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value0_x(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value0_x(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value0_y(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value0_y(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value0_z(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value0_z(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value1_w(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value1_w(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value0_w(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value0_w(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value1_x(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value1_x(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value1_y(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value1_y(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value2_w(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value2_w(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value3_y(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value3_y(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value3_x(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value3_x(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2WaterfallData_get_baseColor(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_baseColor(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2WaterfallData_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_flags(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2WaterfallData_get_unknown0(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_unknown0(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value3_w(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value3_w(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value3_z(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value3_z(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_value4_y(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_value4_y(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_unknown1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_unknown1(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_unknown2(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_unknown2(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_unknown3(IntPtr self);
